; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_setpreset.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_setpreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NB_PRESETS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"audio-filter\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"equalizer\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"equalizer-preset\00", align 1
@preset_list = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_equalizer_setpreset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_equalizer_setpreset(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @luaL_checknumber(i32* %8, i32 1)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @NB_PRESETS, align 4
  %12 = icmp sge i32 %10, %11
  br i1 %12, label %16, label %13

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %13, %1
  store i32 0, i32* %2, align 4
  br label %46

17:                                               ; preds = %13
  %18 = load i32*, i32** %3, align 8
  %19 = call i32* @vlclua_get_aout_internal(i32* %18)
  store i32* %19, i32** %5, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %46

23:                                               ; preds = %17
  store i32 0, i32* %6, align 4
  %24 = load i32*, i32** %5, align 8
  %25 = call i8* @var_InheritString(i32* %24, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i8* %25, i8** %7, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %23
  %29 = load i8*, i8** %7, align 8
  %30 = call i32* @strstr(i8* %29, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** @preset_list, align 8
  %35 = load i32, i32* %4, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @var_SetString(i32* %33, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32 %38)
  store i32 1, i32* %6, align 4
  br label %40

40:                                               ; preds = %32, %28, %23
  %41 = load i8*, i8** %7, align 8
  %42 = call i32 @free(i8* %41)
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @aout_Release(i32* %43)
  %45 = load i32, i32* %6, align 4
  store i32 %45, i32* %2, align 4
  br label %46

46:                                               ; preds = %40, %22, %16
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}

declare dso_local i32 @luaL_checknumber(i32*, i32) #1

declare dso_local i32* @vlclua_get_aout_internal(i32*) #1

declare dso_local i8* @var_InheritString(i32*, i8*) #1

declare dso_local i32* @strstr(i8*, i8*) #1

declare dso_local i32 @var_SetString(i32*, i8*, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @aout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
